--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "dev": "webpack --mode development",
+    "build": "webpack",
     "start:dev": "webpack-dev-server"
   },
   "devDependencies": {
+    "bulma": "^0.7.5",
+    "css-loader": "^3.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
-  },
-  "dependencies": {
-    "bulma": "^0.7.5"
   }
 }
